--- a/index.html
+++ b/index.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Halaman Web Sederhana</title>
 </head>
 <body>
-    <h1>FASTA</h1>
-    <table>
-        <ul>
-            anjai
-        </ul>
-    </table>
+    <header>
+        <h1>Selamat Datang di Halaman Web Sederhana</h1>
+        <p>Ini adalah contoh halaman web yang dibuat menggunakan HTML.</p>
+    </header>
+
+    <main>
+        <section>
+            <h2>Bagian Konten Utama</h2>
+            <p>HTML (HyperText Markup Language) adalah bahasa yang digunakan untuk membuat halaman web.</p>
+            <p>Anda dapat menambahkan teks, gambar, tautan, dan banyak elemen lainnya ke dalam halaman web.</p>
+        </section>
+
+        <section>
+            <h2>Gambar Contoh</h2>
+            <img src="https://via.placeholder.com/300" alt="Gambar Contoh">
+            <p>Gambar di atas adalah gambar contoh yang ditampilkan menggunakan tag <code>&lt;img&gt;</code>.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>Copyright &copy; 2024 Halaman Web Sederhana</p>
+    </footer>
 </body>
 </html>
