--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main>
         <section>
-            <h2>Bagian Konten Utama</h2>
+            <h2>Bagian Konten Utama gggggg</h2>
             <p>HTML (HyperText Markup Language) adalah bahasa yang digunakan untuk membuat halaman web.</p>
             <p>Anda dapat menambahkan teks, gambar, tautan, dan banyak elemen lainnya ke dalam halaman web.</p>
         </section>
